--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,6 +17,12 @@ tauri-build = { version = "1.2", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2", features = ["api-all"] }
+image = "0.24.5"
+scraper = "0.14.0"
+reqwest = "0.11.13"
+tokio = { version = "1.23.0", features = ["macros"] }
+tempdir = "0.3.7"
+url = "2.3.1"
 
 [features]
 # by default Tauri runs in production mode
