--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,6 +23,8 @@ reqwest = "0.11.13"
 tokio = { version = "1.23.0", features = ["macros"] }
 tempdir = "0.3.7"
 url = "2.3.1"
+sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls"] }
+tokio-stream = "0.1.11"
 
 [features]
 # by default Tauri runs in production mode
