--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@dnd-kit/utilities": "^3.2.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fontsource/noto-sans-jp": "^4.5.12",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
     "@tauri-apps/api": "^1.2.0",
+    "@types/react-highlight-words": "^0.16.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.18.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.2.2",
