--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@types/react-highlight-words": "^0.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-highlight-words": "^0.18.0"
+    "react-highlight-words": "^0.18.0",
+    "react-loader-spinner": "^5.3.4"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.2.2",
