--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
     "@tauri-apps/api": "^1.2.0",
+    "@types/color-convert": "^2.0.0",
     "@types/react-highlight-words": "^0.16.4",
+    "color-convert": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.18.0",
