--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "tierlist-maker"
-version = "0.0.0"
-description = "A Tauri App"
-authors = ["you"]
-license = ""
-repository = ""
+version = "1.0.0"
+description = "Tierlist Maker"
+authors = ["JAPLJ"]
+license = "MIT"
+repository = "https://github.com/JAPLJ/tierlist-maker"
 edition = "2021"
 rust-version = "1.57"
 
